refactor connector data abstractions