@@ -21,7 +21,7 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
-import io.camunda.connector.runtime.core.inbound.InboundConnectorElementImpl;
+import io.camunda.connector.runtime.core.inbound.InboundConnectorElement;
 import io.camunda.connector.runtime.inbound.state.ProcessDefinitionInspector;
 import io.camunda.connector.runtime.inbound.state.ProcessImportResult;
 import io.camunda.connector.runtime.inbound.state.ProcessImportResult.ProcessDefinitionIdentifier;
@@ -38,49 +38,49 @@ public class ProcessDefinitionInspectorUtilTests {
   public void testSingleWebhookInCollaboration() {
     var inboundConnectors = fromModel("single-webhook-collaboration.bpmn", "process");
     assertEquals(1, inboundConnectors.size());
-    assertEquals("start_event", inboundConnectors.get(0).elementId());
+    assertEquals("start_event", inboundConnectors.getFirst().element().elementId());
   }
 
   @Test
   public void testMultipleWebhooksInCollaborationP1() {
     var inboundConnectors = fromModel("multi-webhook-collaboration.bpmn", "process1");
     assertEquals(1, inboundConnectors.size());
-    assertEquals("start_event", inboundConnectors.get(0).elementId());
+    assertEquals("start_event", inboundConnectors.getFirst().element().elementId());
   }
 
   @Test
   public void testMultipleWebhooksInCollaborationP2() {
     var inboundConnectors = fromModel("multi-webhook-collaboration.bpmn", "process2");
     assertEquals(1, inboundConnectors.size());
-    assertEquals("intermediate_event", inboundConnectors.get(0).elementId());
+    assertEquals("intermediate_event", inboundConnectors.getFirst().element().elementId());
   }
 
   @Test
   public void testMultipleWebhookStartEventsInCollaborationP1() {
     var inboundConnectors = fromModel("multi-webhook-start-collaboration.bpmn", "process1");
     assertEquals(1, inboundConnectors.size());
-    assertEquals("start_1", inboundConnectors.get(0).elementId());
+    assertEquals("start_1", inboundConnectors.getFirst().element().elementId());
   }
 
   @Test
   public void testMultipleWebhookStartEventsInCollaborationP2() {
     var inboundConnectors = fromModel("multi-webhook-start-collaboration.bpmn", "process2");
     assertEquals(1, inboundConnectors.size());
-    assertEquals("start_2", inboundConnectors.get(0).elementId());
+    assertEquals("start_2", inboundConnectors.getFirst().element().elementId());
   }
 
   @Test
   public void testSingleWebhookBoundaryEvent() {
     var inboundConnectors = fromModel("single-webhook-boundary.bpmn", "BoundaryEventTest");
     assertEquals(1, inboundConnectors.size());
-    assertEquals("boundary_event", inboundConnectors.get(0).elementId());
+    assertEquals("boundary_event", inboundConnectors.getFirst().element().elementId());
   }
 
   @Test
   public void testSingleWebhookSubprocess() {
     var inboundConnectors = fromModel("single-webhook-subprocess.bpmn", "subprocess_webhook");
     assertEquals(1, inboundConnectors.size());
-    assertEquals("webhook_in_subprocess", inboundConnectors.get(0).elementId());
+    assertEquals("webhook_in_subprocess", inboundConnectors.getFirst().element().elementId());
   }
 
   @Test
@@ -88,7 +88,7 @@ public class ProcessDefinitionInspectorUtilTests {
     var inboundConnectors =
         fromModel("single-kafka-consumer-subprocess.bpmn", "kafka-consumer-subprocess");
     assertEquals(1, inboundConnectors.size());
-    assertEquals("kafka_in_subprocess", inboundConnectors.get(0).elementId());
+    assertEquals("kafka_in_subprocess", inboundConnectors.getFirst().element().elementId());
   }
 
   @Test
@@ -98,17 +98,17 @@ public class ProcessDefinitionInspectorUtilTests {
     assertEquals(2, inboundConnectors.size());
     assertNotNull(
         inboundConnectors.stream()
-            .filter(ic -> ic.elementId().equals("wh-start-msg-1"))
+            .filter(ic -> ic.element().elementId().equals("wh-start-msg-1"))
             .findFirst()
             .get());
     assertNotNull(
         inboundConnectors.stream()
-            .filter(ic -> ic.elementId().equals("wh-start-msg-2"))
+            .filter(ic -> ic.element().elementId().equals("wh-start-msg-2"))
             .findFirst()
             .get());
   }
 
-  private List<InboundConnectorElementImpl> fromModel(String fileName, String processId) {
+  private List<InboundConnectorElement> fromModel(String fileName, String processId) {
     try {
       var operateClientMock = mock(CamundaOperateClient.class);
       var inspector = new ProcessDefinitionInspector(operateClientMock);
